# micro-services

./: .gitignore  docker-compose.yml  mock_emb_server.py  traefik-dynamic.yml
auth-service/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  project-init.md  pyproject.toml  requirements.txt  run.py
auth-service/.git-mono-backup/: COMMIT_EDITMSG  index
auth-service/.git-mono-backup/refs/heads/: master
auth-service/.github/workflows/: ci.yml
auth-service/.trae/documents/: 产品需求文档.md  技术架构文档.md
auth-service/app/: __init__.py  factory.py  main.py
auth-service/app/config/: __init__.py  settings.py
auth-service/app/exceptions/: __init__.py  handlers.py
auth-service/app/logging/: __init__.py  config.py
auth-service/app/middleware/: logging.py  monitoring.py  rate_limit.py  security.py
auth-service/app/models/: auth.py
auth-service/app/monitoring/: __init__.py  metrics.py  sentry_config.py  tracing.py
auth-service/app/repositories/: supabase.py
auth-service/app/routers/: auth.py  health.py  test.py
auth-service/app/services/: auth.py
auth-service/app/templates/: auth_test.html  email_confirmed.html
auth-service/docs/: monitoring.md
auth-service/monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
auth-service/monitoring/grafana/dashboards/: auth-supabase-dashboard.json
auth-service/monitoring/grafana/provisioning/dashboards/: dashboard.yml
auth-service/monitoring/grafana/provisioning/datasources/: prometheus.yml
auth-service/scripts/: deploy-monitoring.ps1
auth-service/tests/: conftest.py
auth-service/tests/integration/: test_auth_api.py
auth-service/tests/unit/: test_auth_service.py
llm-service/: project.txt  requirements.txt  run.py  test_doc_parse.html  test_embeddings.html  test_features.py  test_file_upload.py  test_frontend.html  test_rerank.html  test_voice_api.html  voice_clone_config.json
llm-service/.git-mono-backup/: COMMIT_EDITMSG  index
llm-service/.git-mono-backup/refs/heads/: master
llm-service/.trae/rules/: project_rules.md
llm-service/app/: __init__.py  config.py  crud_schemas.py  db.py  main.py  models.py  schemas.py
llm-service/app/adapters/: __init__.py  alibaba.py  base.py  echo.py  openai.py  openrouter.py
llm-service/app/routers/: ali_voices.py  chat.py  embeddings.py  gateway.py  providers.py  rerank.py  voice.py
llm-service/app/services/: chat_service.py  providers_service.py
llm-service/app/services/ali_voice/: ali_voice_service.py  voice_service.py
llm-service/app/services/ali_voice/npl/: token_generator.py  tts_aliyun.py
llm-service/app/services/ali_voice/voice_clone/: __init__.py  test_voice_clone.py  voice_clone.py  voice_clone_config.json  voice_manager.py
llm-service/app/tools/: __init__.py  registry.py  websearch.py
postgres-custom/: Dockerfile
rag-service/: project.txt  requirements.txt  run.py
rag-service/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
rag-service/app/routers/: docs.py  ingest.py  search.py
rag-service/app/services/: __init__.py  llms_gateway_client.py
todo-service/: .gitignore  Dockerfile  project.txt  requirements.txt  run.py
todo-service/app/: db.py  main.py  router.py  service.py
todo-service/app/templates/: index.html
